--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,26 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100;500&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+* {
+  font-family: "Montserrat", sans-serif;
+}
+
+input {
+  border: 1px solid #ccc;
+  height: 40px;
+  padding-left: 20px;
+}
+
+input:focus {
+  border: 1px solid rgb(40, 40, 40);
+  outline: none;
+}
+
+.primary-contained-btn {
+  background-color: #395144;
+  height: 40px;
+  padding: 0 20px;
+  color: white;
+}
