--- a/src/index.css
+++ b/src/index.css
@@ -4,23 +4,42 @@
 @tailwind utilities;
 
 * {
-  font-family: "Montserrat", sans-serif;
+  font-family: "Montserrat", sans-serif !important;
+  overflow: hidden;
 }
 
-input {
+input,
+textarea {
   border: 1px solid #ccc;
-  height: 40px;
   padding-left: 20px;
+  padding-top: 8px;
+  padding-bottom: 8px;
 }
 
-input:focus {
+input:focus,
+textarea:focus {
   border: 1px solid rgb(40, 40, 40);
   outline: none;
 }
 
 .primary-contained-btn {
-  background-color: #395144;
+  background-color: #001628;
   height: 40px;
   padding: 0 20px;
   color: white;
+}
+
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #c2c2c2;
 }
